--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="libs"/>
+	<classpathentry kind="lib" path="libs/easyaccept.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
