--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="TestJUnit"/>
 	<classpathentry kind="src" path="libs"/>
 	<classpathentry kind="lib" path="libs/easyaccept.jar"/>
 	<classpathentry kind="output" path="bin"/>
