--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,6 @@
-/controller/
-<<<<<<< HEAD
 /base/
-=======
->>>>>>> 6d16176a023281dd93c1384a3540ebd400cb3ecb
+/comparators/
+/controller/
+/easyaccept.jar
+/excecoes/
+/facade/
