Adicionei funcionalidades para US11

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,13 @@
+/facade/
+/controller/
+/_COM1.txt
+/_COM2.txt
+/_COM3.txt
 /base/
+/comparators/
+/COM1-RESULTADOS.txt
+/COM2-RESULTADOS.txt
+/COM3-RESULTADOS.txt
+/_COM1-RESULTADOS.txt
+/_COM2-RESULTADOS.txt
+/_COM3-RESULTADOS.txt
