--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,11 @@
 	<classpathentry kind="src" path="TestJUnit"/>
 	<classpathentry kind="src" path="libs"/>
 	<classpathentry kind="src" path="arquivos"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="libs/easyaccept.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
